--- a/src/custom/variables/_color.scss
+++ b/src/custom/variables/_color.scss
@@ -9,9 +9,6 @@ $header-bg: #ffffff;
 $primary-font-color: #484848;
 $secondary-font-color: #919191;
 
-$primary-price-font-color: #f28b00;
-$secondary-price-font-color: #484848;
-
 //Links
 $primary-link-color: #484848;
 $primary-hover-link-color: #f28b00;
@@ -23,27 +20,28 @@ $secondary-border-color: #bfbfbf;
 //Breadcrumb
 $breadcrumb-font-color: #646464;
 
-//Buttons
+//Disabled
 $disabled-color: #bfbfbf;
-$primary-button-bg-color: #f28b00;
-$secondary-button-bg-color: #537ecf;
-
 $disabled-bg-color: #dddddd;
 
+//Buttons
+$primary-button-bg-color: #f28b00;
+$secondary-button-bg-color: #537ecf;
 $primary-button-font-color: #ffffff;
 
+// Tabs
+// TODO: Names need to be changed to avoid confusion
 $primary-tabs-background-color: #dddddd;
 $primary-tabs-hover-background-color: #bfbfbf;
-
 $secondary-tabs-hover-background-color: #ffffff;
 
-$third-tabs-backgorund-color: #919191;
-$third-tabs-hover-backgorund-color: #646464;
+$third-tabs-background-color: #919191;
+$third-tabs-hover-background-color: #646464;
 $third-tabs-color: #ffffff;
 
+// Notifications
 $primary-notification-bg-color: #f28b00;
 $secondary-notification-bg-color: #ffffff;
-
 $primary-notification-border-color: #ffffff;
 
 //Inputs
